<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="79dp"
        android:layout_height="73dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:contentDescription="@string/settingsButtonString"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_settings" />

    <Button
        android:id="@+id/todayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginStart="78dp"
        android:textColor="#FFFFFF"
        android:background="#18a0fb"
        android:gravity="center"
        android:text="@string/todayString"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/hotspotButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="78dp"
        android:text="@string/hotspotsString"
        android:textColor="#FFFFFF"
        android:background="#18a0fb"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/introText"
        android:layout_width="90dp"
        android:layout_height="51dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="88dp"
        android:text="@string/introString"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userNameText"
        android:layout_width="153dp"
        android:layout_height="42dp"
        android:layout_marginEnd="124dp"
        android:layout_marginTop="88dp"
        android:text="@string/userNameText"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/introText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:text="@string/currentLocationText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introText" />

    <TextView
        android:id="@+id/currentLocationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="37dp"
        android:text="@string/locationText"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/locationText"
        app:layout_constraintTop_toBottomOf="@+id/userNameText" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="78dp"
        android:layout_marginEnd="78dp"
        android:layout_marginTop="240dp"
        android:layout_marginBottom="120dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>